js/js.translator/testData/incremental/invalidation/jsCode/lib1/l1.3.kt
inline fun foo() = js("'hello'")
